syntax = "proto3";

option go_package = "github.com/traceableai/goagent/config";

message AgentConfig {
    // serviceName identifies the service/process running
    string serviceName = 1;

    Reporting reporting = 2;

    DataCapture dataCapture = 3;
}

message Reporting {
    // tracesEndpointHost represents the host for reporting the traes e.g. api.traceable.ai
    string tracesEndpointHost = 1;
}

message DataCapture {
    // enableHTTPPayloads enables/disables the capture of the request/response payload
    bool enableHTTPPayloads = 1;

    // enableHTTPHeaders enables/disables the capture of the request/response headers
    bool enableHTTPHeaders = 2;

    // enableRPCPayloads enables/disables the capture of the request/response payload
    bool enableRPCPayloads = 3;

    // enableRPCMetadata enables/disables the capture of the request/response metadata
    bool enableRPCMetadata = 4;
}

